# limacharlie-mcp

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
deploy/mcp-client/: stdio-vault-user-key.json  stdio-vault.json
deploy/vault/: agent-example.hcl
deploy/vault/policies/: limacharlie-mcp-bootstrap.hcl  limacharlie-mcp-runtime.hcl
docs/: agent-experience.md  ax-review.md  deployment.md  onboarding-auth.md  sdk-coverage.md  surface-map.md  tool-contract.md
scripts/: readiness-check.sh
skills/limacharlie-auth-onboarding/: SKILL.md
skills/limacharlie-auth-onboarding/agents/: openai.yaml
skills/limacharlie-contain-response/: SKILL.md
skills/limacharlie-contain-response/agents/: openai.yaml
skills/limacharlie-detect-triage/: SKILL.md
skills/limacharlie-detect-triage/agents/: openai.yaml
skills/limacharlie-detection-tuning/: SKILL.md
skills/limacharlie-detection-tuning/agents/: openai.yaml
skills/limacharlie-evict-response/: SKILL.md
skills/limacharlie-evict-response/agents/: openai.yaml
skills/limacharlie-posture-review/: SKILL.md
skills/limacharlie-posture-review/agents/: openai.yaml
skills/limacharlie-recover-verify/: SKILL.md
skills/limacharlie-recover-verify/agents/: openai.yaml
src/limacharlie_mcp/: __init__.py  api.py  auth_doctor.py  configure.py  local_vault.py  profiles.py  runtime_config.py  server.py  trajectory_benchmark.py  vault_bootstrap.py
tests/: test_api.py  test_auth_doctor.py  test_ax_trajectories.py  test_deployment_artifacts.py  test_local_vault.py  test_parity_audit.py  test_profiles.py  test_review_tools.py  test_runtime_config.py  test_server.py  test_trajectory_benchmark.py  test_vault_bootstrap.py
tools/parity/: audit_parity.py  categories.json
