[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "limacharlie-mcp"
version = "0.1.0"
description = "Standalone local MCP server for LimaCharlie investigation and administration workflows"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
  "hvac>=2.3.0,<3",
  "httpx>=0.27.1",
  "mcp>=1.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
limacharlie-mcp = "limacharlie_mcp.server:main"
limacharlie-mcp-vault-bootstrap = "limacharlie_mcp.vault_bootstrap:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
