[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "limacharlie-mcp"
version = "0.1.0"
description = "Standalone local MCP server for LimaCharlie investigation and administration workflows"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
  "hvac>=2.3.0,<3",
  "httpx>=0.27.1",
  "mcp>=1.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
limacharlie-mcp = "limacharlie_mcp.server:main"
limacharlie-mcp-core = "limacharlie_mcp.server:main_core"
limacharlie-mcp-fleet = "limacharlie_mcp.server:main_fleet"
limacharlie-mcp-admin = "limacharlie_mcp.server:main_admin"
limacharlie-mcp-content = "limacharlie_mcp.server:main_content"
limacharlie-mcp-detect = "limacharlie_mcp.server:main_detect"
limacharlie-mcp-contain = "limacharlie_mcp.server:main_contain"
limacharlie-mcp-evict = "limacharlie_mcp.server:main_evict"
limacharlie-mcp-recover = "limacharlie_mcp.server:main_recover"
limacharlie-mcp-review = "limacharlie_mcp.server:main_review"
limacharlie-mcp-auth-doctor = "limacharlie_mcp.auth_doctor:main"
limacharlie-mcp-vault-bootstrap = "limacharlie_mcp.vault_bootstrap:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
